--- a/package.json
+++ b/package.json
@@ -6,16 +6,22 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "format": "prettier --write src/"
   },
   "dependencies": {
     "@heroicons/vue": "^2.0.18",
     "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@rushstack/eslint-patch": "^1.2.0",
     "@vitejs/plugin-vue": "^4.2.3",
+    "@vue/eslint-config-prettier": "^9.0.0",
     "autoprefixer": "^10.4.16",
+    "eslint": "^8.34.0",
+    "eslint-plugin-vue": "^9.9.0",
     "postcss": "^8.4.31",
+    "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
     "tailwindcss": "^3.3.5",
     "vite": "^4.4.5"
